Update for API Gateway
- beacons as they are now stored in a database
- beacon zone as they'll use the gateway information for that

--- a/config.json
+++ b/config.json
@@ -12,13 +12,5 @@
   "scanInterval": 2,
   "averageInterval": 15,
   "sendInterval": 60,
-  "retryInterval": 250,
-  "rpiZone": {
-    "name": "one",
-    "limit": -65
-  },
-  "beacons": [
-    { "macAddr": "E9:F6:A1:2B:AD:69", "name": "2BAD69BB" },
-    { "macAddr": "FC:3E:28:A4:8F:4E", "name": "A48F4EBA" }
-  ]
+  "retryInterval": 250
 }
